finished with stash

--- a/about.html
+++ b/about.html
@@ -1,3 +1,7 @@
 In Safari, viewing a webpage's source code requires enabling the developer options. The following sections show you how to turn on this feature and then how to view the source code of a web page.
 
 Accessing developer options in Safa
+
+In Safari, viewing a webpage's source code requires enabling the developer options. The following sections show you how to turn on this feature and then how to view the source code of a web page.
+
+Accessing developer options in Safa
